trending aligned correctly

--- a/app/www/css/index.css
+++ b/app/www/css/index.css
@@ -32,15 +32,15 @@ div.trending {
   background-color: rgba(255, 255, 255, 0.8);
   margin-left: 10px;
   margin-top: 10px;
-  width: 290px;
+  width: 292px;
   height: 360px;
 }
 
 div.item {
   color: black;
   width: 100%;
-  height: 36px;
-  border-bottom: black 1px solid;
+  height: 35px;
+  border-bottom: #1e1e1e 1px solid;
 }
 
 
